<resources>
    <string name="app_name">Household</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="family_title">Family</string>
    <string name="personal_title">Personal</string>
    <string name="no_network_title">Network Error: Not Connected</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="dialog_confirm_pos">SAVE</string>
    <string name="dialog_confirm_neg">DISMISS</string>
    <string name="dialog_confirm_neu">DELETE TASK</string>
    <string name="tags_title">View All Tags</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_tags">All Tags</string>
    <string name="new_tag_title_hint">Tag Title</string>
    <string name="family_title_menu">Family Options</string>
    <string name="select_header">You have not chosen a family you would like to join. Please select one from the list below, or create your own.</string>
    <string name="select_subheader">Tasks you create for the family will be visible to all of it\'s members, and you can see tasks the other members add.</string>
    <string name="family_item_count">Members: %d</string>
    <string name="new_family_title">Add new Family</string>
    <string name="new_tag_title">Add new Tag</string>
    <string name="family_add_failure">Family was not successfully added. Please try again.</string>
    <string name="login_user_null">Login failed. Could not retrieve user information, please try again.</string>
    <string name="widget_empty_text">No items in list.</string>
    <string name="widget_err_user_fail">Cannot get your user info.</string>
    <string name="widget_date_init">Loading…</string>
    <string name="login_error_snackbar">There was an error logging you in. Please try again.</string>
    <string name="no_family_snackbar">Please select a family in the family tab.</string>
    <string name="leave_family_btn">Leave Family</string>
    <string name="pers_fab_desc">Add Personal Task</string>
    <string name="fam_fab_desc">Add Family</string>
    <string name="new_fam_fab_desc">Add Family Task</string>
    <string name="main_not_connected_msg">You are not connected. Tasks won\'t update.</string>
    <string name="disconnected_click_msg">You cannot add without an internet connection.</string>
    <string name="no_network_menu_msg">Please connect to a network before accessing these menus.</string>
    <string name="empty_task_msg">There are no tasks to display.</string>
    <string name="date_chooser_desc">Date Chooser</string>
    <string name="date_desc">Date</string>
    <string name="duplicate_tag_msg">This tag already exists. Please try again.</string>
    <string name="add_tag_failure_msg">There was a problem adding the tag. Please try again.</string>
    <string name="add_tag_success_msg">Tag %s has been successfully added.</string>
    <string name="new_task_comp_msg">Task has been added successfully.</string>
    <string name="are_you_sure_title">Are you sure?</string>
    <string name="are_you_sure_msg">You are about to delete task %s. Are you sure?</string>
    <string name="save_text">SAVE</string>
    <string name="dismiss_text">DISMISS</string>
    <string name="delete_text">DELETE TASK</string>
    <string name="cancel_text">CANCEL</string>
    <string name="chips_input_cont_desc">Tags Enter Box</string>
    <string name="empty_task_list_dialog_err">No tasks in this list</string>
    <string name="dialog_date_range">%s-%s</string>
    <string name="leave_family_conf_msg">Are you sure you want to leave %s?</string>
    <string name="leave_family_conf_btn">LEAVE</string>
    <string name="delete_task_succ_msg">Successfully deleted task.</string>
    <string name="delete_task_err_msg">There was an error deleting the task. Please try again.</string>

    <string name="logout_key" translatable="false">logout_preference</string>
    <string name="acc_key" translatable="false">account_category</string>
    <string name="widget_data_updated" translatable="false">app_widget_data_updated_intent_tag</string>
    <string name="add_tag_content_desc">Add Tag</string>
</resources>
